# project_templates

./: .gitmodules  boil.manifest
bash/: script
c/: boil.manifest
c/cmake_proj/: CMakeLists.txt
c/make_proj/: makefile
c/make_proj/src/: main.c
c/simple/: makefile
cpp/: boil.manifest
cpp/benchmark/: CMakeLists.txt
cpp/benchmark+fmt/: .clang-format  CMakeLists.txt
cpp/benchmark+fmt/src/: main.cpp
cpp/benchmark/src/: main.cpp
cpp/big_proj/: CMakeLists.txt  README.md
cpp/big_proj/app/: CMakeLists.txt
cpp/big_proj/docker/: docker-compose.yml  start_docker_dev_environment.sh
cpp/big_proj/docker/debian_based/: Dockerfile  docker-entrypoint.sh
cpp/big_proj/docker/debian_based/dotfiles/: bashrc
cpp/big_proj/docker/debian_based/usr_share/nvim/: sysinit.vim
cpp/big_proj/src/: CMakeLists.txt
cpp/big_proj/src/test/: CMakeLists.txt
cpp/big_proj/src/test/serialization/: CMakeLists.txt
cpp/big_proj/src/utils/: CMakeLists.txt  file.h  logging.h
cpp/big_proj/src/utils/file/: CMakeLists.txt  file.cpp
cpp/big_proj/src/utils/logging/: CMakeLists.txt
cpp/big_proj/src/utils/serialization/: all.h
cpp/big_proj/test/: .clang-tidy  CMakeLists.txt
cpp/big_proj/test/serialization/: CMakeLists.txt  main.cpp
cpp/big_proj_2023/: CMakeLists.txt
cpp/big_proj_2023/app/: CMakeLists.txt  args.hpp  main.cpp
cpp/big_proj_2023/benchmarks/: CMakeLists.txt
cpp/big_proj_2023/benchmarks/serialization/: CMakeLists.txt  main.cpp
cpp/big_proj_2023/cmake/: Testing.cmake
cpp/big_proj_2023/docker/: docker-compose.yml  start_docker_dev_environment.sh
cpp/big_proj_2023/docker/debian_based/: Dockerfile  docker-entrypoint.sh
cpp/big_proj_2023/docker/debian_based/dotfiles/: bashrc
cpp/big_proj_2023/docker/debian_based/usr_share/nvim/: sysinit.vim
cpp/big_proj_2023/docker/debian_based/usr_share/nvim/runtime/lua/: lsp_code_action_no_menu.lua
cpp/big_proj_2023/include/: project_name.hpp
cpp/big_proj_2023/include/project_name/: build_config.hpp
cpp/big_proj_2023/src/: CMakeLists.txt
cpp/big_proj_2023/src/internal/utils/: file.hpp  logging.hpp
cpp/big_proj_2023/src/internal/utils/file/: file.cpp
cpp/big_proj_2023/src/misc/: CMakeLists.txt
cpp/big_proj_2023/src/misc/build_config/: CMakeLists.txt  queries.cpp
cpp/big_proj_2023/src/misc/logging/: CMakeLists.txt  logging.cpp
cpp/big_proj_2023/src/test/: CMakeLists.txt
cpp/cmake_proj/: CMakeLists.txt
cpp/cmake_proj/src/: main.cpp
cpp/ffs/: .clang-format  CMakeLists.txt
cpp/ffs/cmake/: ffs.cmake
cpp/ffs/src/: CMakeLists.txt  main.cpp
cpp/godot/: CMakeLists.txt
cpp/larger/: makefile
cpp/larger/src/: header_test.h  main.cpp
cpp/make_proj/: makefile
cpp/make_proj/src/: main.cpp
cpp/mpi_omp/: CMakeLists.txt
cpp/mpi_omp/app/: main.cpp
cpp/mpi_omp/cmake/: DefaultCompilers.cmake  Testing.cmake
cpp/mpi_omp/include/: project_name.hpp
cpp/mpi_omp/src/: CMakeLists.txt  project_name.cpp
cpp/mpi_omp/src/test/: .clang-tidy
cpp/mpi_omp/src/test/serialization/: main.cpp
cpp/simple/: main.cpp  makefile
cpp/w_fmt/src/: main.cpp
fortran/: boil.manifest
fortran/basic/: CMakeLists.txt
fortran/basic/src/: main.f90
fortran/omp/: CMakeLists.txt
fortran/omp/src/: main.f95
go/: .gitignore  makefile
go/basic/: doc.go
html/: index.html
omp/: boil.manifest
omp/basic/: CMakeLists.txt
omp/basic/src/: main.cpp
omp/w_fmt/: CMakeLists.txt
omp/w_fmt/src/: main.cpp
python/: boil.manifest  script.py
python/cli_tool/: README.md  makefile  setup.py
python/cli_tool/project_name/: cmd.py
python/cli_tool/project_name/logging/: __init__.py
python/cli_tool/project_name/util/: deep_union.py  parse.py  prompts.py
sh/: override_defaults.bash  script  script.sh
wordpress/plugin/: project_name.php
